--- a/index.html
+++ b/index.html
@@ -1246,7 +1246,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="row no-gutters">
+								<div class="row">
 									<div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
 										<li><img class="img-responsive pull-right" src="img/hab/ai.png"></li>
 									</div>
@@ -1259,7 +1259,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="row no-gutters">
+								<div class="row">
 									<div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
 										<li><img class="img-responsive pull-right" src="img/hab/id.png"></li>
 									</div>
@@ -1272,7 +1272,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="row no-gutters">
+								<div class="row">
 									<div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
 										<li><img class="img-responsive pull-right" src="img/hab/fl.png"></li>
 									</div>
@@ -1285,7 +1285,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="row no-gutters">
+								<div class="row">
 									<div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
 										<li><img class="img-responsive pull-right" src="img/hab/pr.png"></li>
 									</div>
@@ -1298,7 +1298,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="row no-gutters">
+								<div class="row">
 									<div class="col-lg-2 col-md-2 col-sm-2 col-xs-3">
 										<li><img class="img-responsive pull-right" src="img/hab/ae.png"></li>
 									</div>
