--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
 								</svg>
 							</div>
 							<center>
-								<div id="svgTipoResponsive" style="position:absolute;" data-0="top:10%;left:40%;" data-100="top:65%;">
+								<div id="svgTipoResponsive" style="position:absolute;" data-0="top:20%;left:40%;" data-end="top:20%;tleft:40%;">
 									<svg version="1.0" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="200px" height="200px" viewBox="0 30 150 100" enable-background="new 0 0 0 0">
 										<g>
 											<path d="M57.742,22.699c0.016,0.71-0.056,1.333-0.213,1.87c-0.079,0.237-0.174,0.465-0.284,0.686
