--- a/index.html
+++ b/index.html
@@ -936,12 +936,14 @@
 		<script>
 		   new WOW().init();
 		</script>
-		<script type="text/javascript" src="js/skrollr.min.js"></script>
-		<script type="text/javascript">
+		<script src="js/skrollr.min.js"></script>
+		<script>
 			skrollr.init({
 				forceHeight: false
 			});
 
 		</script>
+		<script src="https://raw.githubusercontent.com/WickyNilliams/enquire.js/master/dist/enquire.js"></script>
+		<script src="js/_main.js"></script>
 	</body>
 </html>
