--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
 		<!-- Custom CSS -->
 		<link rel="stylesheet" href="css/style.css" type="text/css">
 	    <link href='https://fonts.googleapis.com/css?family=Just+Another+Hand' rel='stylesheet' type='text/css'>
+	    
 	</head>
 	<body id="page-top">
 		<div class="row">
 			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 				<div class="row">
-					<div class="skrollr-body col-lg-6 col-md-6 col-sm-12 col-xs-12">
+					<div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
 						<div id="mainNav" class="text-center main">
 				            <div class="uno" data-0="background-position:0px 0px;" data-100000="background-position:0px 30000px" style="font-family: Just Another Hand">
 				            	
@@ -937,12 +938,10 @@
 		   new WOW().init();
 		</script>
 		<script src="js/skrollr.min.js"></script>
-		<script>
-			skrollr.init({
-				forceHeight: false
-			});
-
+		<script type="text/javascript">
+		skrollr.init({
+			forceHeight: false
+		});
 		</script>
-		<script src="js/_main.js"></script>
 	</body>
 </html>
