--- a/index.html
+++ b/index.html
@@ -939,7 +939,9 @@
 		   new WOW().init();
 		</script>
 		<script src="js/skrollr.min.js"></script>
-		
+		<script type="text/javascript">
+			skrollrInit();
+		</script>
 		<script src="js/_main.js"></script>
 	</body>
 </html>
