--- a/index.html
+++ b/index.html
@@ -940,7 +940,9 @@
 		</script>
 		<script src="js/skrollr.min.js"></script>
 		<script type="text/javascript">
-			skrollrInit();
+		skrollr.init({
+	        forceHeight: false
+	    });
 		</script>
 		<script src="js/_main.js"></script>
 	</body>
