--- a/index.html
+++ b/index.html
@@ -914,6 +914,7 @@
 									<div class="redes">
 										<li><a href="https://github.com/KarenHeredia89" target="_blank"><img src="img/hab/gitcontact.png"></a></li>
 										<li><a href="https://mx.linkedin.com/in/karenherediadg" target="_blank"><img src="img/hab/linkcontact.png"></a></li>
+										<li><a href="img/cv.pdf" class="download" download="cv.pdf"><h4 class="animated flash infinite">Descarga aquí mi CV</h4></a></li>
 									</div>
 									<div class="correo">
 										<li><img src="img/hab/mail.png">karenherediadg@gmail.com</li>
