--- a/index.html
+++ b/index.html
@@ -869,10 +869,10 @@
 								</div>
 								<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 								    <div class="hovereffect">
-								        <img class="img-responsive" src="img/danza.jpg" alt="">
+								        <img class="img-responsive" src="img/miami.jpg" alt="">
 								        <div class="overlay">
-								           <h2>Escuela de danza</h2>
-								           <a class="info" href="http://karenheredia89.github.io/danzaPortfolio/" target="_blank">Click para ver proyecto!<img class="img-responsive git" src="img/hab/gitWhite.png"></a>
+								           <h2>Miami Lux Tour</h2>
+								           <a class="info" href="http://karenheredia89.github.io/MiamiLuxTour/" target="_blank">Click para ver proyecto!<img class="img-responsive git" src="img/hab/gitWhite.png"></a>
 								        </div>
 								    </div>
 								</div>
@@ -902,6 +902,29 @@
 								           <a class="info" href="http://karenheredia89.github.io/Fundacion-Gema/" target="_blank">Click para ver proyecto!<img class="img-responsive git" src="img/hab/gitWhite.png"></a>
 								        </div>
 								    </div>
+								</div>
+							</div>
+							<div class="row colaboraciones">
+								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+									<h1>Colaboraciones</h1>
+								</div>
+								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+									<a href="http://dendrocapital.com/">Dendro Capital</a>
+								</div>
+								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+									<a href="http://quoin.mx/">Quoin</a>
+								</div>
+								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+									<a href="http://sandraweil.com/">Sandra Weil</a>
+								</div>
+								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+									<a href="https://www.angelesporlosninos.mx/">Angeles por los niños | UNICEF</a>
+								</div>
+								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+									<a href="http://www.foxmediafriends.com/">Fox Media Friends</a>
+								</div>
+								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+									<a href="http://www.volvocars.com/mx">Volvo México</a>
 								</div>
 							</div>
 						</section>
