cv junio y actualización

--- a/index.html
+++ b/index.html
@@ -665,8 +665,9 @@
 								<img class="img-responsive" src="img/profile.png">
 								<h1>Acerca de mí</h1>
 							</center>
-							<p style="text-align:center;"><strong>Soy Diseñadora Gráfica y Desarrolladora Front-End</strong></p>
-							<p>Siempre me ha llamado la atención la forma en la que nos comunicamos y en cómo han evolucionado los medios por los cuáles hacemos esto posible. Laboratoria ha sido una invaluable oportunidad de hacer lo que siempre he querido con una visión que va más allá de lo técnico y trasciende a través de amistades para logar  un verdadero crecimiento laboral y personal. Una de mis metas, gracias a las herramientas que me brinda Laboratoria, es poder integrarme en proyectos de gran impacto social, que beneficien a muchos a corto y  largo plazo.</p>
+							<p style="text-align:center;"><strong>Diseñadora Gráfica y Front-End Developer</strong></p>
+							<p>Interesada en las diversas formas de comunicación visual y su evolución a través de los medios por los cuales es posible presentarla.
+							Con una visión que convine los aspectos teóricos, prácticos y técnicos del diseño y la programación en los proyectos laborados para lograr un impacto social y empresarial que beneficie tanto mi desarrollo profesional como el crecimiento de quienes me contratan</p>
 						</section>
 						<section id="hab">
 						<h1>Habilidades</h1>
@@ -837,7 +838,7 @@
 								</div>
 								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12  web">
 									<ul><strong>Herramientas de Desarrollo Web</strong>
-										<p>JavaScript, jQuery, Responsive</p>
+										<p>JavaScript, jQuery, Laravel, CMS, Responsive Design</p>
 									
 										<div class="col-lg-2 col-md-2 col-sm-2 col-xs-4">
 											<li><img class="img-responsive animated bounceIn wow" src="img/hab/sublime.png"></li>
@@ -872,6 +873,7 @@
 								        <img class="img-responsive" src="img/miami.jpg" alt="">
 								        <div class="overlay">
 								           <h2>Miami Lux Tour</h2>
+								           <p>Programación y Proceso Creativo</p>
 								           <a class="info" href="http://karenheredia89.github.io/MiamiLuxTour/" target="_blank">Click para ver proyecto!<img class="img-responsive git" src="img/hab/gitWhite.png"></a>
 								        </div>
 								    </div>
@@ -881,6 +883,7 @@
 								        <img class="img-responsive" src="img/loveblog.jpg" alt="">
 								        <div class="overlay">
 								           <h2>Love Blog Theme</h2>
+								           <p>Programación</p>
 								           <a class="info" href="http://karenheredia89.github.io/loveBlogPortfolio/" target="_blank">Click para ver proyecto!<img class="img-responsive git" src="img/hab/gitWhite.png"></a>
 								        </div>
 								    </div>
@@ -890,6 +893,7 @@
 								        <img class="img-responsive" src="img/user.jpg" alt="">
 								        <div class="overlay">
 								           <h2>User Testing 360°</h2>
+								           <p>Programación</p>
 								           <a class="info" href="http://karenheredia89.github.io/UserTesting360Portfolio/" target="_blank">Click para ver proyecto!<img class="img-responsive git" src="img/hab/gitWhite.png"></a>
 								        </div>
 								    </div>
@@ -899,6 +903,7 @@
 								        <img class="img-responsive" src="img/gema.jpg" alt="">
 								        <div class="overlay">
 								           <h2>Fundación Gema</h2>
+								           <p>Programación y Proceso Creativo</p>
 								           <a class="info" href="http://karenheredia89.github.io/Fundacion-Gema/" target="_blank">Click para ver proyecto!<img class="img-responsive git" src="img/hab/gitWhite.png"></a>
 								        </div>
 								    </div>
@@ -926,6 +931,9 @@
 								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 									<a href="http://www.volvocars.com/mx">Volvo México</a>
 								</div>
+								<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+									<a href="http://www.hpnotiq.mx/">Hpnotiq</a>
+								</div>
 							</div>
 						</section>
 						<section id="contact">
@@ -937,11 +945,11 @@
 									<div class="redes">
 										<li><a href="https://github.com/KarenHeredia89" target="_blank"><img src="img/hab/gitcontact.png"></a></li>
 										<li><a href="https://mx.linkedin.com/in/karenherediadg" target="_blank"><img src="img/hab/linkcontact.png"></a></li>
-										<li><a href="img/cv.pdf" class="download" download="cv.pdf"><h4 class="animated flash infinite">Descarga aquí mi CV</h4></a></li>
+										<li><a href="img/CV-jun-17.pdf" class="download" download="cv.pdf"><h4 class="animated flash infinite">Descarga aquí mi CV</h4></a></li>
 									</div>
 									<div class="correo">
 										<li><img src="img/hab/mail.png">karenherediadg@gmail.com</li>
-										<li><img src="img/hab/num.png">43-28-46-72</li>
+										<li><img src="img/hab/num.png">55-43-28-46-72</li>
 									</div>
 								</div>
 							</div>
