--- a/index.html
+++ b/index.html
@@ -651,9 +651,9 @@
 						</div>
 					</div>
 				</div>
-				<div class="elscroll animated pulse wow infinite" style="position:absolute;z-index:10000;" data-0="top:5%;left:39%;" data-1000="top:40%;">
+				<!-- <div class="elscroll animated pulse wow infinite" style="position:absolute;z-index:10000;" data-0="top:5%;left:39%;" data-1000="top:40%;">
 					<img class="img-responsive" src="img/hab/scroll.png">
-				</div>
+				</div> -->
 			</div>
 		</div>
 		<div class="row">
@@ -878,7 +878,7 @@
 								        </div>
 								    </div>
 								</div>
-								<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+								<!-- <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 								    <div class="hovereffect">
 								        <img class="img-responsive" src="img/loveblog.jpg" alt="">
 								        <div class="overlay">
@@ -887,8 +887,8 @@
 								           <a class="info" href="http://karenheredia89.github.io/loveBlogPortfolio/" target="_blank">Click para ver proyecto!<img class="img-responsive git" src="img/hab/gitWhite.png"></a>
 								        </div>
 								    </div>
-								</div>
-								<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+								</div> -->
+								<!-- <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 								    <div class="hovereffect">
 								        <img class="img-responsive" src="img/user.jpg" alt="">
 								        <div class="overlay">
@@ -897,7 +897,7 @@
 								           <a class="info" href="http://karenheredia89.github.io/UserTesting360Portfolio/" target="_blank">Click para ver proyecto!<img class="img-responsive git" src="img/hab/gitWhite.png"></a>
 								        </div>
 								    </div>
-								</div>
+								</div> -->
 								<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
 								    <div class="hovereffect">
 								        <img class="img-responsive" src="img/gema.jpg" alt="">
@@ -945,11 +945,11 @@
 									<div class="redes">
 										<li><a href="https://github.com/KarenHeredia89" target="_blank"><img src="img/hab/gitcontact.png"></a></li>
 										<li><a href="https://mx.linkedin.com/in/karenherediadg" target="_blank"><img src="img/hab/linkcontact.png"></a></li>
-										<li><a href="img/CV-jun-17.pdf" class="download" download="cv.pdf"><h4 class="animated flash infinite">Descarga aquí mi CV</h4></a></li>
+										<!-- <li><a href="img/CV-jun-17.pdf" class="download" download="cv.pdf"><h4 class="animated flash infinite">Descarga aquí mi CV</h4></a></li> -->
 									</div>
 									<div class="correo">
-										<li><img src="img/hab/mail.png">karenherediadg@gmail.com</li>
-										<li><img src="img/hab/num.png">55-43-28-46-72</li>
+										<li>karenherediadg@gmail.com</li><br>
+										<li>55-43-28-46-72</li>
 									</div>
 								</div>
 							</div>
