--- a/index.html
+++ b/index.html
@@ -1,195 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
 	<title>Portfolio</title>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
+  	<link rel="shortcut icon" href="public/images/favicon.png" type="image/png">
+
+	<!-- ----------- Styles ----------- -->
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,500,700 rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="public/css/styles.css">
+	<link rel="stylesheet" type="text/css" href="public/css/media.css">
+
+	<!-- ----------- Scripts ----------- -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script>
-
-	<style>
-		* {
-			margin: 0;
-			padding: 0;
-			box-sizing: border-box;
-		}
-		body {
-			display: flex;
-			height: 100vh;
-			overflow: hidden;
-			font-family: 'Montserrat', sans-serif;
-			color: #EBF2F1;
-		}
-		::-moz-selection { /* Code for Firefox */
-		  color: #EBF2F1;
-		  background: #1A1A1A;
-		}
-
-		::selection {
-		  color: #EBF2F1;
-		  background: #1A1A1A;
-		}
-		.menu {
-			color: #EBF2F1;
-			cursor: pointer;
-			-webkit-transition: all 0.6s ease-in-out;
-			-moz-transition: all 0.6s ease-in-out;
-			-o-transition: all 0.6s ease-in-out;
-			transition: all 0.6s ease-in-out;
-		}
-		.menu:hover, .active {
-			color: #6099A6;
-			position: relative;
-		}
-		.menuTools {
-			margin: 3em 0;
-			text-align: right;
-			font-size: 14px;
-			font-weight: 200;
-		}
-		.menuTools p {
-			margin: 3em 0;
-		}
-		.active::before {
-			content: '';
-			position: absolute;
-			bottom: 47%;
-			left: 102%;
-			border-top: 1px solid #6099A6;
-			width: 20px;
-		}
-		li {
-			list-style: none;
-			padding: 1em 0;
-			font-weight: 200;
-			font-size: .8em;	
-		}
-		#path-left, #path-right {
-			height: 100%;
-		}
-		#path-left {
-			width: 30%;
-			/*background-color: #024059;*/
-			background-color: #1A1A1A;
-		}
-		#path-right {
-			width: 70%;
-			overflow-x: hidden;
-			/*background-color: #6099A6;*/
-			background-color: #024059;
-		}
-		nav	{
-			width: 90%;
-			height: 100%;
-			padding: 20px;
-			margin: 0 auto;
-			text-align: right;
-			display: flex;
-			flex-direction: column;
-			justify-content: space-around;
-		}
-		h1 {
-			color: #6099A6;
-		}
-		.container {
-			width: 100%;
-			display:  flex;
-			flex-wrap: wrap;
-			justify-content: flex-start;
-		}
-		.box {
-			width: 24.7%;
-			/*background-color: #025E73;*/
-		}
-		.box img {
-			width: 100%;
-			height: 100%;
-			cursor: pointer;
-		}
-		.modal-container {
-			display: none;
-			position: absolute;
-			top: 0;
-			bottom: 0;
-			right: 0;
-			left: 0;
-			background-color: rgba(0, 0, 0, 0.8);
-			align-items: center;
-			justify-content: center;
-			color: #333;
-		}
-		.modal {
-			margin: 0 auto;
-			width: 80%;
-			max-height: 600px;
-			display: flex;
-			position: relative;
-		}
-		.close {
-			position: absolute;
-			right: 15px;
-			top: 15px;
-			text-align: center;
-			padding: 5px 10px;
-		    border-radius: 100%;
-		    cursor: pointer;
-		    -webkit-transition: all 0.6s ease-in-out;
-			-moz-transition: all 0.6s ease-in-out;
-			-o-transition: all 0.6s ease-in-out;
-			transition: all 0.6s ease-in-out;
-		}
-		.close:hover {
-			background-color: #d1d1d1;
-		}
-		.content {
-			width: 75%;
-			overflow: auto;
-			border-radius: 5px 0 0 5px;
-		}
-		.content img {
-			width: 100%;
-		}
-	
-		.specs {
-			width: 25%;
-			padding: 1em;
-			background-color: #EBF2F1;
-			border-radius: 0 5px 5px 0;
-		}
-		.title {
-			margin: 1em 0 0;
-		}
-		.subtitle , .process, .date, .company {
-			font-weight: 200;
-		}
-		.subtitle {
-			margin: 1em 0;
-		}
-		.company {
-			margin: .5em 0;
-		}
-		.date, .company {
-			color: #808080;
-		}
-		.process {
-			margin: 2em 0 1em;
-		}
-		.tools {
-			font-size: 14px;
-			margin: 1em 0;
-		}
-		.tools img {
-			display: inline;
-			width: 12%;
-			border: 1px solid #333;
-			border-radius: 100%;
-			margin-right: 5px;
-		}
-		.site {
-			color: inherit;
-		}
-		video {
-			width: 100%;
-		}
-	</style>
 </head>
 <body>
 	<div id="path-left">
@@ -209,21 +33,21 @@
 	<div id="path-right">
 		<div class="container">
 
-			<div id="techno" class="box ux"><img src="public/images/techno.png"></div>
-			<div id="cuantrix" class="box ux"><img src="public/images/cuantrix.png"></div>
-			<div id="tecno" class="box ux"><img src="public/images/tecnolochicas.png"></div>
-			<div id="bancomer" class="box both"><img src="public/images/bancomer.png"></div>
-			<div id="allegro" class="box front"><img src="public/images/allegro.png"></div>
-			<div id="volvo" class="box front"><img src="public/images/volvo.png"></div>
-			<div id="hpnotiq" class="box front"><img src="public/images/hpnotiq.png"></div>
-			<div id="cdmx" class="box ux"><img src="public/images/cdmx.png"></div>
-			<div id="dendro" class="box front"><img src="public/images/dendro.png"></div>
-			<div id="miami" class="box both"><img src="public/images/miami.png"></div>
-			<div id="fox" class="box front"><img src="public/images/fox.png"></div>
+			<div id="techno" class="box ux"><img src="public/images/techno.png" alt="Technolochicas"></div>
+			<div id="cuantrix" class="box ux"><img src="public/images/cuantrix.png" alt="Cuantrix"></div>
+			<div id="tecno" class="box ux"><img src="public/images/tecnolochicas.png" alt="Tecnolochicas"></div>
+			<div id="bancomer" class="box both"><img src="public/images/bancomer.png" alt="BBVA Bancomer"></div>
+			<div id="allegro" class="box front"><img src="public/images/allegro.png" alt="Allegro Spirits"></div>
+			<div id="volvo" class="box front"><img src="public/images/volvo.png" alt="Volvo Cars Mexico"></div>
+			<div id="hpnotiq" class="box front"><img src="public/images/hpnotiq.png" alt="Hpnotiq"></div>
+			<div id="cdmx" class="box ux"><img src="public/images/cdmx.png" alt="Código para la CDMX"></div>
+			<div id="dendro" class="box front"><img src="public/images/dendro.png" alt="Dendro Capital"></div>
+			<div id="miami" class="box both"><img src="public/images/miami.png" alt="Miami Lux Tour"></div>
+			<div id="fox" class="box front"><img src="public/images/fox.png" alt="Fox Media Friends"></div>
 			<div class="box"></div>
 
 		</div>
-
+		
 		<!-- MODAL TECHNO -->
 		<div id="techno-modal" class="modal-container">
 			<div class="modal">
@@ -496,7 +320,6 @@
 
 	</div>
 </body>
-
 <!-- <script type="text/javascript">
 
 	var toAdd = document.getElementById('gallery');
